[tool.poetry]
name = "hyperedit"
version = "0.1.0"
description = "Supercut your videos"
authors = ["Jake Stanley <prudentia713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
