[tool.poetry]
name = "hyperedit"
version = "1.4.0"
description = "Supercut your videos"
authors = ["Jake Stanley <prudentia713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.scripts]
deaggress = "scripts.deaggress:main"
split_video = "scripts.split_video:main"
transcribe = "scripts.transcribe:main"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
